css/style.css
/* Font references */
@import url('https://fonts.googleapis.com/css?family=Montserrat|Roboto|Source+Code+Pro|Source+Sans+Pro');

/* keyframes and Animations */

@keyframes fade {
  0% {background-color: #000;}
  100% {background-color: #fff;}
}

/* Scrollbar Styling */
::-webkit-scrollbar {
  width: 5px;
  margin-right: 10px;
}

::-webkit-scrollbar-track { /* Scrollbar track */
  background-color: transparent;
  -webkit-border-radius: 10px; /* For other browsers */
  border-radius: 10px;
}

::-webkit-scrollbar-thumb { /* Scrollbar handle */
  background-color: #FAB81E;
  -webkit-border-radius: 10px; /* For other browsers */
  border-radius: 10px;
}

/* Navbar */
.wrapper {
    display: flex;
    width: 100%;
    align-items: stretch;
}

.wrapper {
    display: flex;
    align-items: stretch;
}

.list-unstyled {
  text-align: center;
  margin-top: 20px;
}

.list-unstyled > li {
  display: inline-block;
}

.about, .home, .merch {
  color: #fff
  font-family: 'Montserrat', sans-serif;
  letter-spacing: 2px;
  font-size: 20px;
  border: 2px solid #fff;
  float: left;
  margin: 10px;
}

a:link {
    color: #fff;
}

/* visited link */
a:visited {
    color: #fff;
    font-family: 'Montserrat', sans-serif;
}

/* mouse over link */
.about:hover, .home:hover, .merch:hover {
    color: #000;
    background-color: #fff;
    transition: background-color 0.5s; */
}

/* selected link */
a:active {
    color: #fff;
}

/* Body styling */
body {
  background-color: #000;
  margin: 0px;
  /* overflow: hidden; */
}

@media screen and (max-width: 560px) {
  .index-glitch-img {
    width: 350px;
    margin-top: 50px;
  }

}

/* Home page styling */
.index-center {
  margin: 0;
  position: absolute;
  top: 40%;
  left: 50%;
  transform: translate(-50%, -50%);

  width: auto;
  height: auto;
}

.timer {
  text-align: center;
  letter-spacing: 3px;
  color: #fff;
  font-size: 48px;
  font-family: 'Roboto', sans-serif;
  margin-top: 50px;
  padding-bottom: 25px;
}

.socialLinksCenter {
  text-align: center;
  padding: 0;
  margin-left: 0;
  margin-top: 40px;
}

/* About page content styling */
#about-page {
  position: inherit;
  margin: auto;
  display: inline-block;
  text-align: center;
  display: none;
}

.profile {
  text-align: center;
  margin-top: 50px;
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 175px;
  height: 175px;
  border-radius: 50%;
}

.subText {
  margin-top: 50px;
  font-size: 3em;
  font-family: 'Roboto', sans-serif;
  color: #fff;
  letter-spacing: 1px;
  position: relative;
}

.subTextUnderline {
  border-bottom: 2px solid #FAB81E;
}

.aboutText {
  font-family: 'Montserrat', sans-serif;
  font-size: 20px;
  color: #fff;
  margin: 25px;
  text-align: left;
  position: relative;
}

.row {
  position: relative;
}

.socialLink {
  text-align: center;
  margin: 15px;
  font-size: 24px;
  color: #fff;
  margin-top: 5px;
}

.socialLink:hover {
  color: #FAB81E;
  -webkit-transition: color 0.25s; /* Safari */
  transition: color 0.25s;
}

.brand-about-text {
  letter-spacing: 2px;
}

